添加删除代理地址阈值的配置

--- a/etc/goproxypool.yml
+++ b/etc/goproxypool.yml
@@ -29,6 +29,8 @@ detect:
   # 检测结果生效时间，单位为秒
   # 代理地址的检测结果在生效时间内，无需再次检测即可使用；超出生效时间则需重新检测
   effective-seconds: 1800
+  # 删除代理地址的阈值。连续多少次未通过检测，删除该代理地址
+  delete-threshold: 5
   # 检测可用性使用的网站。尽量填写国内外都能访问的大型网站
   websites:
     - https://www.baidu.com
