完成持久化存储的完成使用功能

--- a/etc/goproxypool.yml
+++ b/etc/goproxypool.yml
@@ -50,8 +50,10 @@ detect:
 
 # 使用代理地址相关配置
 use:
-  # 当使用代理地址后，是否将其作为一次检测
-  detect: true
+  # 当使用代理地址成功后，是否将其作为一次检测
+  success_detect: true
+  # 当使用失败后，是否立即检测代理地址
+  fail_detect: true
   # 使用代理地址超时时间，单位为秒
   timeout: 3
   # 使用代理地址的重试次数。失败会使用相同地址重试
